# ceph

./: .gitignore  CMakeLists.txt
cmake/modules/: BuildOpentelemetry.cmake
debian/: rules
qa/standalone/: ceph-helpers.sh
src/: CMakeLists.txt
src/common/options/: CMakeLists.txt  rgw.yaml.in
src/erasure-code/: CMakeLists.txt
src/rgw/: CMakeLists.txt  rgw_appmain.cc  rgw_auth.cc  rgw_auth.h  rgw_auth_keystone.cc  rgw_auth_s3.cc  rgw_auth_s3.h  rgw_common.cc  rgw_common.h  rgw_handoff.cc  rgw_handoff.h  rgw_handoff_impl.cc  rgw_handoff_impl.h  rgw_log.cc  rgw_main.cc  rgw_op.cc  rgw_process.cc  rgw_process_env.h  rgw_rest_s3.cc  rgw_rest_s3.h  rgw_rest_storequery.cc  rgw_rest_storequery.h  rgw_token.h  rgw_user.cc
src/rgw/driver/rados/: rgw_user.cc
src/rgw/protos/authenticator/v1/: authenticator.proto
src/test/erasure-code/: CMakeLists.txt
src/test/rgw/: CMakeLists.txt  test_rgw_auth_handoff.cc  test_rgw_storequery.cc
